working on perf meas

--- a/Data/READMEs/RM_PerformanceMeasurement.Rmd
+++ b/Data/READMEs/RM_PerformanceMeasurement.Rmd
@@ -47,46 +47,39 @@ knitr::kable(PerfMeasTibble14_Acc, caption = "Accuracy by Model/Position and Sam
 We can see these two tendencies in the models:
 
 * Mostly better performance with unsampled data, than with sampled data
-* Better performance when we split the positions manually
+* Mostly better performance when we split the positions manually
+
+ThThe four following plots combine the information of both tibbles, showing the accuracy and the F1 score on every sampling method for every position on its own. The horizontal lines show the no information rates for the accuracy, which displays, how a model's performance would be when predicting only 0's.
+
+
+
+RUBEN PLOTS
+
+
 
 ## Our best models
+Now let's have a look at the best model/sampling combination for every position:
 
 ```{r echo = FALSE}
 knitr::kable(ResultTibble14, caption = "The best model/sampling combinations by position", digits=4)
 ```
 
-
+As we see, measured at the F1-score, the atrificial neural networks perform best for QB's, RB's and all positions together. For the WR's it is the rose-both-sampled data trained random forest.
 
 
 ## Discussion
-The great and sometimes perfect results of the random forest model show a high risk of a massive overfit. The other models with accuracies between 89% and 93% seem to be very good at the first sight. But we have to keep the reason for filtering out the players with <10 played games and sampling the data in mind. Here we applied the models to the unsampled but filtered data, which only contains 12.4% of drafted players. This means, that a model predicting "not drafted" for every player would not perform much worse, since it would still have an accuracy of 87.6%. 
+Our models with accuracies up to 91.8% seem to be very good at the first sight. But we have to keep the reason for filtering out the players with <10 played games and sampling the data in mind. Here we applied the models to the unsampled but filtered data of 2014, which only contains 7.01% of drafted players. This means, that a model predicting "not drafted" for every player would still perform better, since it would still have an accuracy of 92.99% on the whole data set (='Together'). In other words, our models all perform unter the 'no information rate', which makes them not really good.
 
-
-## Business case: Predicting the 2014 NFL Draft
-According to this analysis, we should choose random forest to predict which Quarterbacks, Running Backs and Wide Receivers will be picked in the 2014 NFL Draft. We will first have a look at the results we get, using the eight best models, since they are very close with their performance on the set from 2007 to 2013. 
-
-The 2014 data set only contains 7.01% drafted players. Looking at the performance of this model, we see, that the model does not predict 
-Here we see, that the model only 
-
-
-
-
-
-
-
-
-
-
-Interpretations of models are always quite difficult, but the following thoughts are pretty likely to be true, according to the TP/TN/FP/FN. Our models are pretty good at predicting the likelihood of players being drafted that didn't perform very well in college football being low. It probably also does not too bad in predicting great players to be drafted, that nearly must be picked (and probably are picked early in the draft). But there is probably much room for improvement for all the players that still performed well in college, and might or might not be drafted.
+Interpretations of models are always quite difficult, but the following thoughts are pretty likely to be true, according to the TP/TN/FP/FN. Our models are okay at predicting the likelihood of players being drafted that didn't perform very well in college football being low. It probably also does not too bad in predicting great players to be drafted, that nearly must be picked (and probably are picked early in the draft). But there must be much room for improvement for all the players that still performed well in college, and might or might not be drafted. Again in other words, the models can predict the more or less obvious drafts and non-drafts but is not really better than random for the intresting cases.
 
 We would like to close the circle to one of our fist lessons in machine learning, in which we were taught the following very high level formula for models (the right part). Y denotes the true outcome (in our case whether a player is drafted or not), f(X) is the true pattern that describes it, and $\epsilon$ is the noise, which appears to be random. With our models (the left part) we try to predict a $\hat{Y}$, which shall be as close as possible to the true Y.
 
 $$\hat{f}(X) = \hat{Y} \approx Y = f(X) + \varepsilon$$
+
 Looking at this inequation we can think of three possibilities, why our models make so many mistakes:
 
 * Our models $\hat{f_i}(X)$ do not include enough variables and/or are not sophisticated enough
 * The data is not good enough
 * The NFL draft contains a pretty large $\varepsilon$
 
-
-
+Variables that are certainly missing in the model, are the ones that are not quantifyable easily, such as game intelligence, strenght of the own team, strenght of the opponents, maturity of the player and negative factors such as criminality, drug consumation and other negative behaviours. In the past, it happened again and again, that players with great game statistics and a great game intelligence, which were expected to be drafted in the first round fell far behind or were not drafted at all, because pictures of them consuming marihuana were published. 
