--- a/Data/READMEs/RM_PerformanceMeasurement.tex
+++ b/Data/READMEs/RM_PerformanceMeasurement.tex
@@ -197,6 +197,16 @@ NaiveBayes & undersampling & 0.3279 & 0.2667 & 0.3265 &
 NaiveBayes & Rose\_both & 0.3571 & 0.2432 & 0.1379 &
 0.2900\tabularnewline
 NaiveBayes & Smote & 0.3571 & 0.2906 & 0.2667 & 0.3457\tabularnewline
+LogisticRegression & no\_sampling & 0.2875 & 0.3852 & 0.4675 &
+0.4873\tabularnewline
+LogisticRegression & oversampling & 0.3266 & 0.1649 & 0.4525 &
+0.5862\tabularnewline
+LogisticRegression & undersampling & 0.2734 & 0.4777 & 0.4320 &
+0.5870\tabularnewline
+LogisticRegression & Rose\_both & 0.3393 & 0.5081 & 0.4083 &
+0.6002\tabularnewline
+LogisticRegression & Smote & 0.3393 & 0.5081 & 0.4083 &
+0.6002\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -251,6 +261,16 @@ NaiveBayes & undersampling & 0.6466 & 0.7542 & 0.8316 &
 NaiveBayes & Rose\_both & 0.6897 & 0.6872 & 0.8724 &
 0.7881\tabularnewline
 NaiveBayes & Smote & 0.6897 & 0.7682 & 0.6633 & 0.8418\tabularnewline
+LogisticRegression & no\_sampling & 0.8007 & 0.8761 & 0.8704 &
+0.8875\tabularnewline
+LogisticRegression & oversampling & 0.7866 & 0.7834 & 0.7660 &
+0.8358\tabularnewline
+LogisticRegression & undersampling & 0.8272 & 0.7344 & 0.7391 &
+0.8345\tabularnewline
+LogisticRegression & Rose\_both & 0.7802 & 0.8319 & 0.6330 &
+0.8405\tabularnewline
+LogisticRegression & Smote & 0.7802 & 0.8319 & 0.6330 &
+0.8405\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -261,11 +281,22 @@ We can see these two tendencies in the models:
 \item
   Mostly better performance with unsampled data, than with sampled data
 \item
-  Better performance when we split the positions manually
+  Mostly better performance when we split the positions manually
 \end{itemize}
+
+ThThe four following plots combine the information of both tibbles,
+showing the accuracy and the F1 score on every sampling method for every
+position on its own. The horizontal lines show the no information rates
+for the accuracy, which displays, how a model's performance would be
+when predicting only 0's.
+
+RUBEN PLOTS
 
 \hypertarget{our-best-models}{%
 \subsection{Our best models}\label{our-best-models}}
+
+Now let's have a look at the best model/sampling combination for every
+position:
 
 \begin{longtable}[]{@{}lllrr@{}}
 \caption{The best model/sampling combinations by
@@ -279,48 +310,41 @@ Position & Method & Sampling & F1 & Accuracy\tabularnewline
 \midrule
 \endhead
 QB & ANN & no\_sampling & 0.6154 & 0.9138\tabularnewline
-WR & randomForest & Rose\_both & 0.4043 & 0.8436\tabularnewline
+WR & LogisticRegression & Rose\_both & 0.5081 & 0.8319\tabularnewline
 RB & ANN & no\_sampling & 0.5294 & 0.9184\tabularnewline
-Together & ANN & no\_sampling & 0.4779 & 0.9119\tabularnewline
+Together & LogisticRegression & Rose\_both & 0.6002 &
+0.8405\tabularnewline
 \bottomrule
 \end{longtable}
+
+As we see, measured at the F1-score, the atrificial neural networks
+perform best for QB's, RB's and all positions together. For the WR's it
+is the rose-both-sampled data trained random forest.
 
 \hypertarget{discussion}{%
 \subsection{Discussion}\label{discussion}}
 
-The great and sometimes perfect results of the random forest model show
-a high risk of a massive overfit. The other models with accuracies
-between 89\% and 93\% seem to be very good at the first sight. But we
-have to keep the reason for filtering out the players with \textless10
-played games and sampling the data in mind. Here we applied the models
-to the unsampled but filtered data, which only contains 12.4\% of
-drafted players. This means, that a model predicting ``not drafted'' for
-every player would not perform much worse, since it would still have an
-accuracy of 87.6\%.
-
-\hypertarget{business-case-predicting-the-2014-nfl-draft}{%
-\subsection{Business case: Predicting the 2014 NFL
-Draft}\label{business-case-predicting-the-2014-nfl-draft}}
-
-According to this analysis, we should choose random forest to predict
-which Quarterbacks, Running Backs and Wide Receivers will be picked in
-the 2014 NFL Draft. We will first have a look at the results we get,
-using the eight best models, since they are very close with their
-performance on the set from 2007 to 2013.
-
-The 2014 data set only contains 7.01\% drafted players. Looking at the
-performance of this model, we see, that the model does not predict Here
-we see, that the model only
+Our models with accuracies up to 91.8\% seem to be very good at the
+first sight. But we have to keep the reason for filtering out the
+players with \textless10 played games and sampling the data in mind.
+Here we applied the models to the unsampled but filtered data of 2014,
+which only contains 7.01\% of drafted players. This means, that a model
+predicting ``not drafted'' for every player would still perform better,
+since it would still have an accuracy of 92.99\% on the whole data set
+(=`Together'). In other words, our models all perform unter the `no
+information rate', which makes them not really good.
 
 Interpretations of models are always quite difficult, but the following
 thoughts are pretty likely to be true, according to the TP/TN/FP/FN. Our
-models are pretty good at predicting the likelihood of players being
-drafted that didn't perform very well in college football being low. It
-probably also does not too bad in predicting great players to be
-drafted, that nearly must be picked (and probably are picked early in
-the draft). But there is probably much room for improvement for all the
-players that still performed well in college, and might or might not be
-drafted.
+models are okay at predicting the likelihood of players being drafted
+that didn't perform very well in college football being low. It probably
+also does not too bad in predicting great players to be drafted, that
+nearly must be picked (and probably are picked early in the draft). But
+there must be much room for improvement for all the players that still
+performed well in college, and might or might not be drafted. Again in
+other words, the models can predict the more or less obvious drafts and
+non-drafts but is not really better than random for the intresting
+cases.
 
 We would like to close the circle to one of our fist lessons in machine
 learning, in which we were taught the following very high level formula
@@ -330,9 +354,10 @@ describes it, and \(\epsilon\) is the noise, which appears to be random.
 With our models (the left part) we try to predict a \(\hat{Y}\), which
 shall be as close as possible to the true Y.
 
-\[\hat{f}(X) = \hat{Y} \approx Y = f(X) + \varepsilon\] Looking at this
-inequation we can think of three possibilities, why our models make so
-many mistakes:
+\[\hat{f}(X) = \hat{Y} \approx Y = f(X) + \varepsilon\]
+
+Looking at this inequation we can think of three possibilities, why our
+models make so many mistakes:
 
 \begin{itemize}
 \tightlist
@@ -344,6 +369,15 @@ many mistakes:
 \item
   The NFL draft contains a pretty large \(\varepsilon\)
 \end{itemize}
+
+Variables that are certainly missing in the model, are the ones that are
+not quantifyable easily, such as game intelligence, strenght of the own
+team, strenght of the opponents, maturity of the player and negative
+factors such as criminality, drug consumation and other negative
+behaviours. In the past, it happened again and again, that players with
+great game statistics and a great game intelligence, which were expected
+to be drafted in the first round fell far behind or were not drafted at
+all, because pictures of them consuming marihuana were published.
 
 
 \end{document}
