--- a/Data/READMEs/RM_randomForest.Rmd
+++ b/Data/READMEs/RM_randomForest.Rmd
@@ -74,9 +74,17 @@ In order to gain an oversight of the model performance, the cross validated mode
 ```{r, include=FALSE}
 library(tidyverse)
 load("../PerformanceMeasurement/randomForestPerfMeas.Rdata")
+randomForestPerfMeas1 = randomForestPerfMeas %>%
+  select(-c(Method, Sampling))
+PerfMeas = as.data.frame(t(randomForestPerfMeas1))
+names(PerfMeas) = c("No Sampling", "Oversampling", "Undersampling", "Rose Both", "Smote")
 load("../PerformanceMeasurement/randomForestPerfMeas2014.Rdata")
+randomForestPerfMeas2014_1 = randomForestPerfMeas2014 %>%
+  select(-c(Method, Sampling))
+PerfMeas2014 = as.data.frame(t(randomForestPerfMeas2014_1))
+names(PerfMeas2014) = c("No Sampling", "Oversampling", "Undersampling", "Rose Both", "Smote")
 ```
 ```{r echo = FALSE}
-knitr::kable(randomForestPerfMeas, caption = "training data performance")
-knitr::kable(randomForestPerfMeas2014, caption = "testing data performance")
+knitr::kable(PerfMeas, caption = "training data performance")
+knitr::kable(PerfMeas2014, caption = "testing data performance")
 ```
